--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -37,6 +37,30 @@
         <p>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad sapiente rerum eligendi laborum adipisci id enim asperiores, numquam ipsam harum atque velit quaerat pariatur illo dolore doloribus commodi repellat vero?
         </p>
+        <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad sapiente rerum eligendi laborum adipisci id enim asperiores, numquam ipsam harum atque velit quaerat pariatur illo dolore doloribus commodi repellat vero?
+        </p>
+        <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad sapiente rerum eligendi laborum adipisci id enim asperiores, numquam ipsam harum atque velit quaerat pariatur illo dolore doloribus commodi repellat vero?
+        </p>
+        <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad sapiente rerum eligendi laborum adipisci id enim asperiores, numquam ipsam harum atque velit quaerat pariatur illo dolore doloribus commodi repellat vero?
+        </p>
+        <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad sapiente rerum eligendi laborum adipisci id enim asperiores, numquam ipsam harum atque velit quaerat pariatur illo dolore doloribus commodi repellat vero?
+        </p>
+        <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad sapiente rerum eligendi laborum adipisci id enim asperiores, numquam ipsam harum atque velit quaerat pariatur illo dolore doloribus commodi repellat vero?
+        </p>
+        <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad sapiente rerum eligendi laborum adipisci id enim asperiores, numquam ipsam harum atque velit quaerat pariatur illo dolore doloribus commodi repellat vero?
+        </p>
+        <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad sapiente rerum eligendi laborum adipisci id enim asperiores, numquam ipsam harum atque velit quaerat pariatur illo dolore doloribus commodi repellat vero?
+        </p>
+        <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad sapiente rerum eligendi laborum adipisci id enim asperiores, numquam ipsam harum atque velit quaerat pariatur illo dolore doloribus commodi repellat vero?
+        </p>
     </main>
 
 
